# nanopore-tracking-app

./: .cursorrules  .gitignore  .readthedocs.yaml  .readthedocs.yaml.simple  ASSET_FIX_SUMMARY.md  CACHE_INVALIDATION_FIX_SUMMARY.md  CLEANUP_SUMMARY.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_SCRIPT_UPDATE_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_WITH_SUBMISSION_SERVICE.md  DUPLICATE_SAMPLE_FIX_SUMMARY.md  Dockerfile  Dockerfile.frontend  Dockerfile.production  FIX_SUBMISSIONS_DISPLAY.md  FRONTEND_CHECKLIST.md  FRONTEND_REFACTOR_SUMMARY.md  HTSF--JL-147_quote_160217072025_correct_samples.csv  HTSF--JL-147_quote_160217072025_correct_samples.json  HTSF--JL-147_quote_160217072025_real_samples.csv  HTSF--JL-147_quote_160217072025_real_samples.json  HTSF--JL-147_quote_160217072025_samples.csv  HTSF--JL-147_quote_160217072025_samples.json  HTSF_PDF_TEST_RESULTS.md  MIGRATION_STRATEGY_GUIDE.md  OPENSHIFT_COMPLETE_FIX.md  OPENSHIFT_DB_FIX.md  OPENSHIFT_FIX_SUCCESS.md  OPTIMISTIC_UPDATES_FIX_SUMMARY.md  PDF_PROCESSING_EXAMPLE.md  PNPM_MIGRATION.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS_ASSESSMENT.md  PYTHON_MICROSERVICES_MIGRATION_COMPLETE.md  PYTHON_SERVICE_EXTRACTION_TODO.md  README.md  SUBMISSION_SERVICE_IMPLEMENTATION.md  SUBMISSION_SERVICE_INTEGRATION_CHECKLIST.md  TEST_COVERAGE_SUMMARY.md  (+24 more)
services/submission-service/: .gitignore  Dockerfile  README.md  UV_SETUP_GUIDE.md  app.py  demo_pdf_processing.py  deploy.sh  dev.sh  env.example  package.json  pyproject.toml  requirements.txt  run_tests.sh  start.sh  test_extraction_debug.py  test_pdf_processing.py
(+462 files in other folders)
